Features. Added new config files to the yii2 config folder. Added TestController for Console. Added Console app instance. Added SiteController. Adjusted namespaces. Removed some hardcoded variables and added them to .env file. Updated Readme with the Guide for the micro-app setup process

--- a/.env-sample
+++ b/.env-sample
@@ -1,7 +1,11 @@
+### TIMEZONE (Yii2)
+TIMEZONE=
+
 ### REQUEST COMPONENT
 COOKIE_VALIDATION_KEY=
 
 ### DATABASE
+DB_NAME=
 DB_HOST=
 DB_USERNAME=
 DB_PASSWORD=
