--- a/.gitignore
+++ b/.gitignore
@@ -1,62 +1,25 @@
-### Yii2 Advanced defaults
+# @emilasheras
 
-# yii console commands
-/yii
-/yii_test
-/yii_test.bat
-
-# phpstorm project files
-.idea
-
-# netbeans project files
-nbproject
-
-# zend studio for eclipse project files
-.buildpath
-.project
-.settings
-
-# windows thumbnail cache
+### windows thumbnail cache
 Thumbs.db
 
-# composer vendor dir
+### composer vendor dir
 /vendor
 
-# composer itself is not needed
+### composer itself is not needed
 composer.phar
 
-# Mac DS_Store Files
-.DS_Store
-
-# phpunit itself is not needed
-phpunit.phar
-# local phpunit config
-/phpunit.xml
-
-# vagrant runtime
-/.vagrant
-
-# ignore generated files
-/frontend/web/index.php
-/frontend/web/index-test.php
-/frontend/web/robots.txt
-/backend/web/index.php
-/backend/web/index-test.php
-/backend/web/robots.txt
-
-### @emilasheras
-###
-###     Note to self: All entrypoints files are ignored because 
-###     they are generated when we run the `php init` command for the first time
-###
 ### Environment data
 .env
 
-###
+### Devilbox Symlink htdocs to /web RootDir
 htdocs
-backend/htdocs
-backend/web/web
-frontend/htdocs
+
+### Runtime data (cache, logs, etc.)
 runtime/*
+
+### Application assets
 web/assets/*
+
+### gitkeep
 !.gitkeep
